Fixed a few layout issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ body {
 div[scroll] {
   overflow: auto;
   min-height: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 
 div[c] {
